# u2renderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
engine/: CMakeLists.txt  application.cpp  application.h
engine/math/: mathlib.cpp  mathlib.h
engine/math/float/: float2.cpp  float2.h  float3.cpp  float3.h  float4.h
engine/math/matrix/: matrix2.cpp  matrix2.h  matrix2x2.cpp  matrix2x2.h  matrix3.cpp  matrix3.h  matrix3x3.cpp  matrix3x3.h  matrix4x4.cpp  matrix4x4.h
engine/math/quaternion/: quaternion.cpp  quaternion.h
engine/math/vector/: vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
engine/platform/: platform.cpp  platform.h
engine/platform/win/: win_app.cpp  win_app.h
engine/render/: camera.h  render.cpp  render.h  transform.h
engine/util/: debug.h
scripts/: application.cpp  application.h  main.cpp
scripts/math/: math.cpp  math.h
scripts/math/float/: float2.h  float3.h  float4.cpp  float4.h
scripts/math/matrix/: matrix2x2.h  matrix3x3.h  matrix4x4.cpp  matrix4x4.h
scripts/math/quaternion/: quaternion.h
scripts/math/vector/: vector2.h  vector3.h
scripts/platform/: platform.cpp  platform.h
scripts/platform/win/: win_app.cpp  win_app.h
scripts/render/: render.cpp  render.h
scripts/util/: convert_util.cpp  convert_util.h  debug.cpp  debug.h
