set(ENGINE_CORE_DIR "${ENGINE_ROOT_DIR}/engine")

file(GLOB_RECURSE HEADER_FILES "*.h")
file(GLOB_RECURSE SOURCE_FILES "*.cpp")

source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${HEADER_FILES} ${SOURCE_FILES})

add_library(EngineCore ${HEADER_FILES} ${SOURCE_FILES})

set(ENGINE_CORE_HEADS "${HEADER_FILES}" PARENT_SCOPE)
